Fixed alignment and margin issues in CSS

--- a/src/components/painting-showcase/art-showcase.css
+++ b/src/components/painting-showcase/art-showcase.css
@@ -23,6 +23,11 @@
     grid-row: 2/span 1;
 }
 
+.quote1{
+    grid-column: 4/span 1;
+    grid-row: 3/span 1;
+}
+
 .cellflags{
     height: 256px;
     width: 256px;
