--- a/src/components/quote/quote.css
+++ b/src/components/quote/quote.css
@@ -1,11 +1,12 @@
 .quote{
-    font-size: 2rem;
+    font-size: 1.5rem;
     font-family: 'Julius Sans One', sans-serif;
-    text-align: center;
+    text-align: left;
+    margin: .5rem .5rem .5rem 1rem;
 }
 
 .quote-author{
     font-size: 1rem;
     font-family: 'Cinzel', serif;
-    text-align: center;
+    text-align: right;
 }
